# CodeReviewAgent

./: .env.example  README.md  code_reviews.db  pyproject.toml
app/: config.py  database.py  main.py  models.py  services.py  utils.py
app/routers/: reports.py
static/css/: style.css
static/js/: main.js
templates/: index.html
